# LogSight-AI

./: Dockerfile  README.md  SECURITY.md  app.py  demo.app.py  docker-compose.yml  log_simulator.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
agents/: guards.py  orchestrator.py  state.py
benchmarks/: benchmark_report.md
docs/: AUDIT.md  BENCHMARKING.md  DEPLOYMENT.md
logsight/: analyzer.py  cli.py  parser.py
tests/: test_analyzer.py  test_benchmarks.py  test_cli.py  test_parser.py
