[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logsight-ai"
version = "0.1.0"
description = "AI-powered log analysis and anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["logging", "anomaly-detection", "ai", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
    "pip-audit>=2.7.3",
    "pytest-benchmark>=4.0.0",
    "pip-licenses>=5.0.0",
]

[project.scripts]
logsight = "logsight.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["logsight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --cov=logsight --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["work"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["logsight"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["if __name__ == .__main__.:"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["logsight"]
follow_imports = "skip"
disallow_untyped_decorators = false

[tool.bandit]
exclude_dirs = ["tests", "work"]
